[package]
name = "bevy_fly_camera"
version = "0.7.0"
authors = ["mcpar-land"]
edition = "2018"
exclude = [".vscode/**"]
description = "A basic flying camera in Bevy"
license = "MIT"
repository = "https://github.com/mcpar-land/bevy_fly_camera"
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", default-features = false, features = ["render"] }

[dev-dependencies]
bevy = { version = "0.6", default-features = false, features = ["render", "x11", "png"] }
